fix menu on mobile

--- a/src/scss/blocks/menu.scss
+++ b/src/scss/blocks/menu.scss
@@ -134,7 +134,7 @@
 
 @media screen and (min-width: 370px) {
   .menu {
-    width: 320px;
+    max-width: 376px;
   }
 }
 @media screen and (min-width: $screenT) {
